# qt6-core-beginners

./: README.md
section 10/qt6cb-10-1/: qt6cb-10-1.xml
section 10/qt6cb-10-2/: qt6cb-10-2.xml
section 10/qt6cb-10-3/: CMakeLists.txt  main.cpp
section 10/qt6cb-10-4/: CMakeLists.txt  main.cpp
section 10/qt6cb-10-5/: CMakeLists.txt  main.cpp  test.cpp  test.h
section 10/qt6cb-10-6/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  test.cpp  test.h
section 10/qt6cb-10-7/: CMakeLists.txt  main.cpp
section 10/qt6cb-10-8/: CMakeLists.txt  main.cpp
section 10/qt6cb-10-assign/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
section 11/qt6cb-11-1/: qt6cb-11-1.xml
section 11/qt6cb-11-2/: qt6cb-11-2.xml
section 11/qt6cb-11-3/: qt6cb-11-3.xml
section 11/qt6cb-11-4/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
section 11/qt6cb-11-5/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
section 11/qt6cb-11-6/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
section 11/qt6cb-11-7/: CMakeLists.txt  main.cpp  test.cpp  test.h
section 11/qt6cb-11-8/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
section 11/qt6cb-11-assign/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  test.cpp  test.h
section 12/qt6cb-12-1/: qt6cb-12-1.xml
section 12/qt6cb-12-2/: qt6cb-12-2.xml
section 12/qt6cb-12-3/: CMakeLists.txt  main.cpp
section 12/qt6cb-12-4/: CMakeLists.txt  main.cpp
section 12/qt6cb-12-5/: CMakeLists.txt  car.h  (+1 more)
section 14/qt6cb-14-5/: CMakeLists.txt  main.cpp  test.h
(+228 files in other folders)
